recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:4: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
    droite()
          ^FourSquare:6: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
    droite()
          ^FourSquare:8: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
    droite()
          ^FourSquare:11: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
  droite()
        ^FourSquare:12: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
  droite()
        ^FourSquare:14: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
  droite()
        ^