recursion.logo.lessons.recursion.logo.square.FourSquare.scala.code
override def run() {
  for(i<-1 to 4){
    avance(100.0)
    droite()
    avance(100.0)
    droite()
    avance(100.0)
    droite()
    avance(100.0)
  }
  droite()
  droite()
  avance(100.0)
  droite()
}